--- a/src/Makefile
+++ b/src/Makefile
@@ -5,21 +5,35 @@ CXX 	   =	g++
 
 CXXFLAGS   =	-I./\
 				-I./common/sam_bam\
-				-I./common/files
+				-I./common/files\
+				-I./common/log\
+				-I./common/time\
+				-I./common/test\
+				-lz\
+				-g
 
 source_h   =	contig_barcode.h  \
 		   		common/files/file_reader.h \
 		   		common/files/file_writer.h  \
 		   		common/files/gzstream.h \
-		   		common/sam_bam/sam_parser.h
+		   		common/sam_bam/sam_parser.h\
+				common/log/log.h\
+				common/log/logfilter.h\
+				common/time/timetools.h\
+				common/test/Test.h\
+				common/test/Check.h\
 
 source_cpp =	contig_barcode.cpp \
 		   		common/files/file_reader.cpp \
 		   		common/files/file_writer.cpp \
 		   		common/files/gzstream.cpp \
-		   		common/sam_bam/sam_parser.cpp  
+		   		common/sam_bam/sam_parser.cpp\
+				common/log/log.cpp\
+				common/log/logfilter.cpp\
+				common/time/timetools.cpp
 
-test_cpp   =	test.cpp
+test_cpp   =	test.cpp\
+				common/time/timetools_test.cpp
 
 main_cpp   =	main.cpp
 
@@ -29,12 +43,13 @@ test_o 	   =	${test_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 
 .cpp.o:
-	${CXX} ${CXXFLAGS} -c $<
+	${CXX} ${CXXFLAGS} -c $< -o $@
 
 
-all: ${main_o}
+all: ${main_o} ${source_h}
 
-test:
+test: clean ${test_o} ${source_h}
+	${CXX} ${CXXFLAGS} ${test_o} -o test
 
 dirty	   =	${test_o} ${main_o} 
 
