--- a/src/Makefile
+++ b/src/Makefile
@@ -4,11 +4,12 @@ CC 		   =	gcc
 CXX 	   =	g++
 
 CXXFLAGS   =	-I./\
-				-I./common/sam_bam\
+				-I./biocommon/sam_bam\
 				-I./common/files\
 				-I./common/log\
 				-I./common/time\
 				-I./common/test\
+				-I./common/string\
 				-lz\
 				-g
 
@@ -16,25 +17,28 @@ source_h   =	contig_barcode.h  \
 		   		common/files/file_reader.h \
 		   		common/files/file_writer.h  \
 		   		common/files/gzstream.h \
-		   		common/sam_bam/sam_parser.h\
+		   		biocommon/sam_bam/sam_parser.h\
 				common/log/log.h\
 				common/log/logfilter.h\
 				common/time/timetools.h\
 				common/test/Test.h\
 				common/test/Check.h\
+				common/string/stringtools.h\
 
 source_cpp =	contig_barcode.cpp \
 		   		common/files/file_reader.cpp \
 		   		common/files/file_writer.cpp \
 		   		common/files/gzstream.cpp \
-		   		common/sam_bam/sam_parser.cpp\
+		   		biocommon/sam_bam/sam_parser.cpp\
 				common/log/log.cpp\
 				common/log/logfilter.cpp\
-				common/time/timetools.cpp
+				common/time/timetools.cpp\
+				common/string/stringtools.cpp\
 
 test_cpp   =	test.cpp\
 				common/time/timetools_test.cpp\
-				common/sam_bam/sam_parser_test.cpp
+				common/string/stringtools_test.cpp\
+				biocommon/sam_bam/sam_parser_test.cpp
 
 main_cpp   =	main.cpp
 
