--- a/src/Makefile
+++ b/src/Makefile
@@ -47,16 +47,17 @@ test_cpp   =	test.cpp\
 				common/args/argsparser_test.cpp\
 
 job_01_cpp =	job01.cpp
-
-job_03_cpp =	job03.cpp
-
-job_02_cpp =	job02.cpp
-
 job_01_o   =	${job_01_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
+job_03_cpp =	job03.cpp
+job_03_o   =	${job_03_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
+
+job_02_cpp =	job02.cpp
 job_02_o   =	${job_02_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
-job_03_o   =	${job_03_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
+job_04_cpp =	job04.cpp
+job_04_o   =	${job_04_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
+
 
 test_o 	   =	${test_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
@@ -64,7 +65,11 @@ test_o 	   =	${test_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 .cpp.o:
 	${CXX} ${DEUBG_CXX} -c $< -o $@
 
-all : test job01 job02 job03
+jobs 	   =	job01 job02 job03 job04
+jobs_o 	   =	${job_01_o} ${job_03_o} ${job_02_o}  ${job_04_o}
+
+all : test ${jobs}
+
 
 job01 : clean ${job_01_o}
 	${CXX} ${DEUBG_CXX} ${job_01_o} -o job01
@@ -75,10 +80,13 @@ job02 : clean ${job_02_o}
 job03 : clean ${job_03_o}
 	${CXX} ${DEUBG_CXX} ${job_03_o} -o job03
 
+job04 : clean ${job_04_o}
+	${CXX} ${DEUBG_CXX} ${job_04_o} -o job04
+
 test: clean ${test_o} ${source_h}
 	${CXX} ${DEUBG_CXX} ${test_o} -o test
 
-dirty	   =	${test_o} ${job_01_o} ${job_03_o} ${job_02_o} job01 job02 test job03
+dirty	   =	${test_o} ${jobs_o} ${jobs}  test
 
 clean:
 	rm -rf ${dirty}
