--- a/src/Makefile
+++ b/src/Makefile
@@ -76,14 +76,20 @@ job_09_o   =	${job_09_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 job_10_cpp =	job10.cpp
 job_10_o   =	${job_10_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
+job_11_cpp =	job11.cpp
+job_11_o   =	${job_11_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
+
 test_o 	   =	${test_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 
 .cpp.o:
 	${CXX} ${DEUBG_CXX} -c $< -o $@
 
-jobs 	   =	job01 job02 job03 job04 job05 job06 job07 job08 job09 job10
-jobs_o 	   =	${job_01_o} ${job_03_o} ${job_02_o}  ${job_04_o} ${job_05_o} ${job_06_o}  ${job_07_o} ${job_08_o} ${job_09_o}  ${job_10_o}
+jobs 	   =	job01 job02 job03 job04 job05 job06 job07 job08 job09 job10 \
+				job11
+jobs_o 	   =	${job_01_o} ${job_03_o} ${job_02_o}  ${job_04_o} ${job_05_o}\
+				${job_06_o}  ${job_07_o} ${job_08_o} ${job_09_o}  ${job_10_o} \
+				${job_11_o}
 
 all : test ${jobs}
 
@@ -114,6 +120,12 @@ job08 : clean ${job_08_o}
 
 job09 : clean ${job_09_o}
 	${CXX} ${DEUBG_CXX} ${job_09_o} -o job09
+
+job10 : clean ${job_10_o}
+	${CXX} ${DEUBG_CXX} ${job_10_o} -o job10
+
+job11 : clean ${job_11_o}
+	${CXX} ${DEUBG_CXX} ${job_11_o} -o job11
 
 test: clean ${test_o} ${source_h}
 	${CXX} ${DEUBG_CXX} ${test_o} -o test
