--- a/src/Makefile
+++ b/src/Makefile
@@ -79,6 +79,9 @@ job_10_o   =	${job_10_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 job_11_cpp =	job11.cpp
 job_11_o   =	${job_11_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
+job_12_cpp =	job12.cpp
+job_12_o   =	${job_12_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
+
 test_o 	   =	${test_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 
@@ -86,10 +89,10 @@ test_o 	   =	${test_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 	${CXX} ${DEUBG_CXX} -c $< -o $@
 
 jobs 	   =	job01 job02 job03 job04 job05 job06 job07 job08 job09 job10 \
-				job11
+				job11 job12
 jobs_o 	   =	${job_01_o} ${job_03_o} ${job_02_o}  ${job_04_o} ${job_05_o}\
 				${job_06_o}  ${job_07_o} ${job_08_o} ${job_09_o}  ${job_10_o} \
-				${job_11_o}
+				${job_11_o} ${job_12_o}
 
 all : test ${jobs}
 
@@ -126,6 +129,9 @@ job10 : clean ${job_10_o}
 
 job11 : clean ${job_11_o}
 	${CXX} ${DEUBG_CXX} ${job_11_o} -o job11
+
+job12 : clean ${job_12_o}
+	${CXX} ${DEUBG_CXX} ${job_12_o} -o job12
 
 test: clean ${test_o} ${source_h}
 	${CXX} ${DEUBG_CXX} ${test_o} -o test
