--- a/src/Makefile
+++ b/src/Makefile
@@ -12,6 +12,8 @@ CXXFLAGS   =	-std=c++11 -I./\
 				-I./common/args\
 				-I./common/test\
 				-I./common/string\
+				-I./common/multithread\
+				-I./soap2\
 				-I./stLFR\
 				-lz\
 
@@ -44,6 +46,8 @@ source_cpp =	contig_barcode.cpp \
 				stLFR/barcodeId.cpp\
 				stLFR/readName2Barcode.cpp\
 				common/args/argsparser.cpp\
+				soap2/loadGraph.cpp\
+				soap2/contigGraph.cpp\
 
 test_cpp   =	test.cpp\
 				common/time/timetools_test.cpp\
@@ -91,6 +95,9 @@ Sam2ReadInContig_o 	 	= ${Sam2ReadInContig_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o
 MergeClusterResult_cpp	= MergeClusterResult.cpp
 MergeClusterResult_o 	= ${MergeClusterResult_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o} 
 
+SuperContig_cpp 		= SuperContig.cpp
+SuperContig_o			= ${SuperContig_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
+
 test_o 	   =	${test_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 
@@ -98,11 +105,11 @@ test_o 	   =	${test_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 	${CXX} ${DEUBG_CXX} -c $< -o $@
 
 jobs 	   =	BarcodeOnContig FormatBarcodeOnRef BarcodeOnBin BinCluster ContigTypeByRef ContigGraphType StaticsticUnique  UnicomGraph \
-				ClusterGap job12 LinearClusterResult Sam2ReadInContig MergeClusterResult
+				ClusterGap job12 LinearClusterResult Sam2ReadInContig MergeClusterResult SuperContig
 jobs_o 	   =	${BarcodeOnContig_o} ${BarcodeOnBin_o} ${FormatBarcodeOnRef_o}  ${BinCluster_o} ${ContigTypeByRef_o}\
 				${ContigGraphType_o}  ${StaticsticUnique_o}  ${UnicomGraph_o} \
 				${ClusterGap_o} ${job_12_o} ${LinearClusterResult_o} ${Sam2ReadInContig_o} \
-				${MergeClusterResult_o}
+				${MergeClusterResult_o} ${SuperContig_o}
 
 all : test ${jobs}
 
@@ -142,11 +149,16 @@ LinearClusterResult : clean ${LinearClusterResult_o}
 
 Sam2ReadInContig: clean ${Sam2ReadInContig_o}
 	${CXX} ${DEUBG_CXX} ${Sam2ReadInContig_o} -o Sam2ReadInContig 
+
 MergeClusterResult : clean ${MergeClusterResult_o}
 	${CXX} ${DEUBG_CXX} ${MergeClusterResult_o} -o MergeClusterResult
 
+SuperContig: clean ${SuperContig_o}
+	${CXX} ${DEUBG_CXX} ${SuperContig_o} -o SuperContig
+
 test: clean ${test_o} ${source_h}
 	${CXX} ${DEUBG_CXX} ${test_o} -o test
+
 
 dirty	   =	${test_o} ${jobs_o} ${jobs}  test
 
