--- a/src/Makefile
+++ b/src/Makefile
@@ -125,6 +125,9 @@ ContigRoadFill2Fasta_o	= ${ContigRoadFill2Fasta_cpp:%.cpp=%.o} ${source_cpp:%.cp
 MergeContig_cpp			= MergeContig.cpp
 MergeContig_o			= ${MergeContig_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
+SolveMulti_cpp			= SolveMulti.cpp
+SolveMulti_o			= ${SolveMulti_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
+
 test_o 	   =	${test_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 
@@ -135,14 +138,14 @@ jobs 	   =	BarcodeOnContig BarcodeOnContig_NoRef FormatBarcodeOnRef BarcodeOnBin
 				ContigTypeByRef ContigGraphType StaticsticUnique  UnicomGraph \
 				ClusterGap job12 LinearClusterResult Sam2ReadInContig MergeClusterResult \
 				SuperContig LinkCheck LinkCheck_1 FillContigRoad ContigRoadFill2Fasta \
-				MergeContig
+				MergeContig SolveMulti
 jobs_o 	   =	${BarcodeOnContig_o} ${BarcodeOnContig_NoRef_o}  ${BarcodeOnBin_o} ${FormatBarcodeOnRef_o} \
 				${BinCluster_o} ${ContigTypeByRef_o}\
 				${ContigGraphType_o}  ${StaticsticUnique_o}  ${UnicomGraph_o} \
 				${ClusterGap_o} ${job_12_o} ${LinearClusterResult_o} ${Sam2ReadInContig_o} \
 				${MergeClusterResult_o} ${SuperContig_o} ${LinkCheck_o} \
 				${FillContigRoad_o} ${ContigRoadFill2Fasta_o} ${LinkCheck_1_o} \
-				${MergeContig_o}
+				${MergeContig_o} ${SolveMulti_o}
 
 all : test ${jobs}
 
@@ -208,6 +211,10 @@ ContigRoadFill2Fasta : clean  ${ContigRoadFill2Fasta_o}
 
 MergeContig : clean ${MergeContig_o}
 	${CXX} ${DEUBG_CXX} ${MergeContig_o} -o MergeContig
+
+SolveMulti : clean ${SolveMulti_o}
+	${CXX} ${DEUBG_CXX} ${SolveMulti_o} -o SolveMulti
+
 
 test: clean ${test_o} ${source_h}
 	${CXX} ${DEUBG_CXX} ${test_o} -o test
