rename BarcodeOnContig_NoRef ChopBin

--- a/src/Makefile
+++ b/src/Makefile
@@ -73,8 +73,8 @@ test_cpp   =	test.cpp\
 
 source_o					= ${source_cpp:%.cpp=%.o}
 
-BarcodeOnContig_NoRef_cpp =	BarcodeOnContig_NoRef.cpp
-BarcodeOnContig_NoRef_o   =	${BarcodeOnContig_NoRef_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
+ChopBin_cpp 			=	ChopBin.cpp
+ChopBin_o   =	${ChopBin_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 
 BarcodeOnContig_cpp =	BarcodeOnContig.cpp
 BarcodeOnContig_o   =	${BarcodeOnContig_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
@@ -151,12 +151,12 @@ test_o 	   =	${test_cpp:%.cpp=%.o} ${source_cpp:%.cpp=%.o}
 .cpp.o:
 	${CXX} ${DEUBG_CXX} -c $< -o $@
 
-jobs 	   =	BarcodeOnContig BarcodeOnContig_NoRef FormatBarcodeOnRef BarcodeOnBin BinCluster \
+jobs 	   =	BarcodeOnContig ChopBin FormatBarcodeOnRef BarcodeOnBin BinCluster \
 				ContigTypeByRef ContigGraphType StaticsticUnique  UnicomGraph \
 				ClusterGap job12 LinearClusterResult Sam2ReadInContig MergeClusterResult \
 				SuperContig LinkCheck LinkCheck_1 FillContigRoad ContigRoadFill2Fasta \
 				MergeContig SolveMulti ClusterLengthSim LinearCDG
-jobs_o 	   =	${BarcodeOnContig_o} ${BarcodeOnContig_NoRef_o}  ${BarcodeOnBin_o} ${FormatBarcodeOnRef_o} \
+jobs_o 	   =	${BarcodeOnContig_o} ${ChopBin_o}  ${BarcodeOnBin_o} ${FormatBarcodeOnRef_o} \
 				${BinCluster_o} ${ContigTypeByRef_o}\
 				${ContigGraphType_o}  ${StaticsticUnique_o}  ${UnicomGraph_o} \
 				${ClusterGap_o} ${job_12_o} ${LinearClusterResult_o} ${Sam2ReadInContig_o} \
@@ -169,8 +169,8 @@ all : test ${jobs}
 
 
 
-BarcodeOnContig_NoRef : clean ${BarcodeOnContig_NoRef_o}
-	${CXX} ${DEUBG_CXX} ${BarcodeOnContig_NoRef_o} -o BarcodeOnContig_NoRef
+ChopBin : clean ${ChopBin_o}
+	${CXX} ${DEUBG_CXX} ${ChopBin_o} -o ChopBin
 
 
 BarcodeOnContig : clean ${BarcodeOnContig_o}
